--- a/views/trackerlogin.ejs
+++ b/views/trackerlogin.ejs
@@ -22,3 +22,9 @@
     </div>
 </body>
 </html>
+<script type="text/javascript"> 
+    window.history.forward(); 
+    function noBack() { 
+        window.history.forward(); 
+    } 
+</script> 
