--- a/views/trackerregister.ejs
+++ b/views/trackerregister.ejs
@@ -23,3 +23,9 @@
     </div>
 </body>
 </html>
+<script type="text/javascript"> 
+    window.history.forward(); 
+    function noBack() { 
+        window.history.forward(); 
+    } 
+</script> 
